Creado un Branch para Herencia. Agregada la clase tiburon que hereda de Pez. Falta solucionar algunas incongruencias a la hora de girar las imagenes.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,3 @@
-/hembra_pez.png
-/hembra_tiburon.png
-/macho_pez.png
-/macho_tiburon.png
-/original.png
 /pecera/
-/pez.gif
+/hembra_piranha.png
+/macho_piranha.png
