Creado el Branch Herencia2.
-Agregadas las clases Delfin, Pulpo y Tortuga.
-Falta desarrollar los movimientos de las nuevas clases.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,11 @@
+/hembra_pez.png
+/hembra_tiburon.png
+/macho_pez.png
+/macho_tiburon.png
 /pecera/
-/hembra_piranha.png
-/macho_piranha.png
+/hembra_delfin.png
+/hembra_pulpo.png
+/hembra_tortuga.png
+/macho_delfin.png
+/macho_pulpo.png
+/macho_tortuga.png
