Branch de herencia2 funcionando. Creada la clase Abstracta *Animal.
-Arregladas algunas incoherencias a la hora de girar las imagenes segun
la dirección.
-Los *animales se crean a partir de su clase y la cantidad deseada.
-Falta corregir algunas incongruencias con los movimientos de los
delfines.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,13 @@
-/hembra_pez.png
-/hembra_tiburon.png
-/macho_pez.png
-/macho_tiburon.png
-/pecera/
 /hembra_delfin.png
+/hembra_pez.png
 /hembra_pulpo.png
+/hembra_tiburon.png
 /hembra_tortuga.png
 /macho_delfin.png
+/macho_pez.png
 /macho_pulpo.png
+/macho_tiburon.png
 /macho_tortuga.png
+/pecera/
+/fondo1.jpg
+/fondo2.jpg
